syntax = "proto3";

option go_package = "kloudlite.io/rpc/ci";

service CI {
  rpc CreateHarborProject(HarborProjectIn) returns (HarborProjectOut);
  rpc DeleteHarborProject(HarborProjectIn) returns (HarborProjectOut);
}

message PipelineIn {
  string name = 1;
  string gitProvider = 4;
  string gitRepoUrl = 5;
  string gitBranch = 6;
  string userId = 9;
  string projectId = 10;
  map<string, string> metadata = 11;
}

message PipelineOutput {
  string pipelineId = 1;
}

message HarborProjectIn {
  string name = 1;
}

message HarborProjectOut {
  bool status = 1;
}

